--- a/scheduler/build.gradle
+++ b/scheduler/build.gradle
@@ -26,48 +26,6 @@ repositories {
 	mavenCentral()
 }
 
-dependencies {
-	//JPA
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-	compile "org.springframework.boot:spring-boot-starter-data-jpa"
-
-	//Add-ons
-	implementation 'org.springframework.boot:spring-boot-starter-mail'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
-	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
-
-	//Web
-	implementation 'org.springframework.boot:spring-boot-starter-web'
-	implementation 'org.springframework.boot:spring-boot-starter-web-services'
-	implementation 'org.springframework.boot:spring-boot-starter-webflux'
-	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
-	implementation 'org.springframework.session:spring-session-core'
-
-	//QueryDSL
-	implementation "com.querydsl:querydsl-apt:5.0.0:jakarta"
-	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-
-	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
-	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
-	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-	annotationProcessor("jakarta.persistence:jakarta.persistence-api")
-	annotationProcessor("jakarta.annotation:jakarta.annotation-api")
-	annotationProcessor 'org.projectlombok:lombok'
-
-	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
-
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
-
-	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-
-	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
-	testImplementation 'org.springframework.security:spring-security-test'
-	testAnnotationProcessor'org.projectlombok:lombok:1.18.20'
-	testCompileOnly 'org.projectlombok:lombok:1.18.20'
-}
 
 tasks.named('test') {
 	useJUnitPlatform()
@@ -95,4 +53,47 @@ allprojects {
 
 		maven { url 'https://jitpack.io' }
 	}
+}
+dependencies {
+
+	//JPA
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+	compile "org.springframework.boot:spring-boot-starter-data-jpa"
+
+	//QueryDSL
+	implementation "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+
+	//Annotation
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	annotationProcessor 'org.projectlombok:lombok'
+
+	//Web
+	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-web-services'
+	implementation 'org.springframework.boot:spring-boot-starter-webflux'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
+	implementation 'org.springframework.session:spring-session-core'
+
+	//Add-ons
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
+	implementation 'org.springframework.boot:spring-boot-starter-security'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation 'com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.8.1'
+
+	compileOnly 'org.projectlombok:lombok'
+	runtimeOnly 'com.mysql:mysql-connector-j'
+
+	developmentOnly 'org.springframework.boot:spring-boot-devtools'
+
+	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
+
+	//Test
+	testImplementation 'org.springframework.boot:spring-boot-starter-test'
+	testImplementation 'io.projectreactor:reactor-test'
+	testImplementation 'org.springframework.security:spring-security-test'
+	testAnnotationProcessor'org.projectlombok:lombok:1.18.20'
+	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 }
