--- a/scheduler/src/main/resources/application.yml
+++ b/scheduler/src/main/resources/application.yml
@@ -19,7 +19,7 @@ spring:
     open-in-view: false
 
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
 
     properties:
       format_sql: true
