--- a/scheduler/build.gradle
+++ b/scheduler/build.gradle
@@ -68,10 +68,12 @@ dependencies {
 	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:3.0.0'
 
 	//Annotation
+	annotationProcessor 'org.projectlombok:lombok'
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
+	implementation 'org.modelmapper:modelmapper:3.1.1'
 	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-	annotationProcessor 'org.projectlombok:lombok'
 
 	//Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -81,6 +83,7 @@ dependencies {
 	implementation 'org.springframework.session:spring-session-core'
 
 	//Add-ons
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
