--- a/scheduler/build.gradle
+++ b/scheduler/build.gradle
@@ -66,9 +66,10 @@ dependencies {
 
 	//Annotation
 	annotationProcessor 'org.projectlombok:lombok'
-	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
 	//Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
@@ -78,6 +79,7 @@ dependencies {
 	implementation 'org.springframework.session:spring-session-core'
 
 	//Add-ons
+	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 
