--- a/scheduler/src/main/resources/application.yml
+++ b/scheduler/src/main/resources/application.yml
@@ -9,6 +9,12 @@ spring:
     user:
       name: user
       password: 123
+  devtools:
+    livereload:
+      enabled: true
+  messages:
+    basename: errors
+
 
   datasource: # jdbc
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -23,7 +29,7 @@ spring:
     open-in-view: false
 
     hibernate:
-      ddl-auto: update
+      ddl-auto: create-drop
 
 
     properties:
@@ -38,6 +44,10 @@ spring:
     view:
       prefix: /templates/
       suffix: .html
+
+  thymeleaf:
+    cache: false #운영시 true
+    enabled: true
 
 
   servlet: #fileupload
