--- a/scheduler/build.gradle
+++ b/scheduler/build.gradle
@@ -92,8 +92,9 @@ dependencies {
 
 	//Test
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
-	testImplementation 'io.projectreactor:reactor-test'
 	testImplementation 'org.springframework.security:spring-security-test'
+	testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0'
+	testImplementation 'io.projectreactor:reactor-test'
 	testAnnotationProcessor'org.projectlombok:lombok:1.18.20'
 	testCompileOnly 'org.projectlombok:lombok:1.18.20'
 }
