--- a/scheduler/build.gradle
+++ b/scheduler/build.gradle
@@ -24,15 +24,10 @@ dependencies {
 	//JPA
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
-	//QueryDSL
-	implementation "com.querydsl:querydsl-apt:5.0.0:jakarta"
-	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
-
 	//Annotation
 	annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
 	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
-	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
 	annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'
 
 	//Web
@@ -68,17 +63,13 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-
 //querydsl 추가 시작
 def querydslDir = "$buildDir/generated/querydsl"
 
 sourceSets {
-	main.java.srcDirs += [ querydslDir ]
+	main.java.srcDir querydslDir
 }
 
-clean.doLast {
-	file(querydslDir).deleteDir()
-}
 //querydsl 추가 끝
 
 allprojects {
