--- a/scheduler/src/main/resources/application.yml
+++ b/scheduler/src/main/resources/application.yml
@@ -1,5 +1,8 @@
+#portfolio
+#3205
+
 server:
-  port: 8090
+  port: 3205
 
 spring:
   sql:
@@ -18,9 +21,9 @@ spring:
 
   datasource: # jdbc
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1/scheduler?characterEncoding=utf-8
+    url: jdbc:mysql://seho0218.synology.me:3306/scheduler_portfolio?characterEncoding=utf-8
     username: root
-    password: root1234
+    password: Root123!@#
 
 
   jpa:
