--- a/scheduler/build.gradle
+++ b/scheduler/build.gradle
@@ -39,6 +39,7 @@ dependencies {
 
 	//Add-ons
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
+	implementation "org.springframework.boot:spring-boot-devtools"
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.0'
