--- a/scheduler/build.gradle
+++ b/scheduler/build.gradle
@@ -42,7 +42,7 @@ dependencies {
 	implementation "org.springframework.boot:spring-boot-devtools"
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
-	implementation 'org.springframework.boot:spring-boot-starter-mail:3.1.0'
+	implementation 'org.springframework.boot:spring-boot-starter-mail'
 
 
 	compileOnly 'org.projectlombok:lombok'
