--- a/scheduler/src/main/resources/application.yml
+++ b/scheduler/src/main/resources/application.yml
@@ -18,40 +18,33 @@ spring:
   messages:
     basename: errors
 
-
   datasource: # jdbc
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://seho0218.synology.me:3306/scheduler_portfolio?characterEncoding=utf-8
     username: root
     password: Root123!@#
 
-
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     database: mysql
     open-in-view: false
-
     hibernate:
       ddl-auto: validate
-
-
     properties:
       hibernate:
         format_sql: true
         show_sql: true
-      hibernate.highlight_sql: true
+        highlight_sql: true
       defer-datasource-initialization: true
 
   thymeleaf:
     cache: false #운영시 true
     enabled: true
 
-
   servlet: #fileupload
     multipart:
       max-file-size: 20MB
       enabled: true
-
 
   mail: #email
     host: smtp.gmail.com
@@ -61,12 +54,11 @@ spring:
     properties:
       mail:
         smtp:
-          starttls.enable: true
-          auth: true
+        starttls.enable: true
+        auth: true
 
-
-logging.level:
-  root: info
-  org.hibernate.SQL: debug
-
-
+#decorator:
+#  datasource:
+#    p6spy:
+#      enable-logging: true
+#      multiline: true
