--- a/scheduler/build.gradle
+++ b/scheduler/build.gradle
@@ -33,7 +33,8 @@ dependencies {
 	//Web
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	implementation 'org.springframework.boot:spring-boot-starter-web-services'
-	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.thymeleaf:thymeleaf'
+	implementation 'org.thymeleaf.extras:thymeleaf-extras-springsecurity6'
 	implementation 'org.springframework.boot:spring-boot-starter-webflux'
 	implementation 'org.springframework.session:spring-session-core'
 
@@ -43,7 +44,6 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
-//	implementation "com.github.gavlyukovskiy:p6spy-spring-boot-starter:1.9.0"
 
 
 	compileOnly 'org.projectlombok:lombok'
