DataSet, Controller, TestCaseLayerModify, adminEmail(TODO)

--- a/scheduler/src/main/resources/application.yml
+++ b/scheduler/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
     database: mysql
     open-in-view: false
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create-drop
     properties:
       hibernate:
         format_sql: true
