--- a/scheduler/build.gradle
+++ b/scheduler/build.gradle
@@ -1,8 +1,14 @@
+buildscript {
+	ext {
+		queryDslVersion = "5.0.0"
+	}
+}
+
 plugins {
-	id 'java'
-	id 'war'
 	id 'org.springframework.boot' version '3.0.6'
 	id 'io.spring.dependency-management' version '1.1.0'
+	id 'java'
+	id 'war'
 }
 
 group = 'com.attendance'
@@ -25,6 +31,14 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'com.mysql:mysql-connector-j'
 
+	implementation "com.querydsl:querydsl-jpa:${queryDslVersion}:jakarta"
+	implementation "com.querydsl:querydsl-core:${queryDslVersion}"
+
+	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
+	annotationProcessor "com.querydsl:querydsl-apt:5.0.0:jakarta"
+	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
+	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
+
 	//Annotation
 	annotationProcessor 'org.projectlombok:lombok'
 	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
@@ -41,7 +55,6 @@ dependencies {
 
 	//Add-ons
 	implementation 'org.mapstruct:mapstruct:1.5.5.Final'
-	implementation "org.springframework.boot:spring-boot-devtools"
 	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
@@ -53,7 +66,6 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
 
-	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
@@ -69,14 +81,21 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
-//querydsl 추가 시작
+
+// === QueryDsl 빌드 옵션 (선택) ===
 def querydslDir = "$buildDir/generated/querydsl"
 
 sourceSets {
-	main.java.srcDir querydslDir
+	main.java.srcDirs += [ querydslDir ]
 }
 
-//querydsl 추가 끝
+tasks.withType(JavaCompile) {
+	options.generatedSourceOutputDirectory = file(querydslDir)
+}
+
+clean.doLast {
+	file(querydslDir).deleteDir()
+}
 
 allprojects {
 	repositories {
