--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@ HELP.md
 .gradle
 build/
 !gradle/wrapper/gradle-wrapper.jar
-!**/src/main/**/build/
-!**/src/test/**/build/
+src/main/**/build/
+src/main/generated/
+src/test/**/build/
 
 ### STS ###
 .apt_generated
