--- a/src/main/resources/application2.yml
+++ b/src/main/resources/application2.yml
@@ -1,39 +1,28 @@
-#service
+#portfolio
+#3205
 
 server:
-  port: 9090
+  port: 3205
 
 spring:
   sql:
     init:
       mode: always
-  security:
-    user:
-      name: user
-      password: 123
-  devtools:
-    livereload:
-      enabled: true
   messages:
     basename: errors
-
 
   datasource: # jdbc
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://seho0218.synology.me:3306/scheduler?characterEncoding=utf-8
     username: root
-    password: #Password
-
+    password: Root123!@#
 
   jpa:
     database-platform: org.hibernate.dialect.MySQLDialect
     database: mysql
     open-in-view: false
-
     hibernate:
       ddl-auto: validate
-
-
     properties:
       hibernate:
         format_sql: true
@@ -45,20 +34,20 @@ spring:
     cache: true #운영시 true
     enabled: true
 
-
   servlet: #fileupload
     multipart:
       max-file-size: 20MB
       enabled: true
 
-
   mail: #email
     host: smtp.gmail.com
     port: 587
-    username: #email_Id
+    username: dev.hsayho@gmail.com
     password: #appPassword
     properties:
       mail:
         smtp:
-          starttls.enable: true
           auth: true
+          starttls:
+            enable: true
+        protocol: smtp
