--- a/build.gradle
+++ b/build.gradle
@@ -5,7 +5,7 @@ buildscript {
 }
 
 plugins {
-	id 'org.springframework.boot' version '3.0.6'
+	id 'org.springframework.boot' version '3.2.5'
 	id 'io.spring.dependency-management' version '1.1.0'
 	id 'java'
 	id 'war'
@@ -59,13 +59,12 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	implementation 'org.springframework.boot:spring-boot-starter-mail'
 	// https://mvnrepository.com/artifact/com.vladmihalcea/db-util
-	implementation 'com.vladmihalcea:db-util:1.0.7'
 
 
 
 	compileOnly 'org.projectlombok:lombok'
 	runtimeOnly 'com.mysql:mysql-connector-j'
-
+	runtimeOnly 'com.h2database:h2'
 
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 
