--- a/src/main/resources/application2.yml
+++ b/src/main/resources/application2.yml
@@ -13,7 +13,7 @@ spring:
 
   datasource: # jdbc
     driver-class-name: com.mysql.cj.jdbc.Driver
-    url: jdbc:mysql://seho0218.synology.me:3306/scheduler?characterEncoding=utf-8
+    url: jdbc:mysql://seho0218.synology.me:3306/scheduler_portfolio?characterEncoding=utf-8
     username: root
     password: Root123!@#
 
